# OctoPrint-Uptime

./: .codacy.yml  .editorconfig  .eslintrc.cjs  .flake8  .gitattributes  .github-action-sha-updater.yml  .gitignore  .pre-commit-config.yaml  .trivyignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  babel.cfg  eslint.config.cjs  jsdoc.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.development/: README.md  RELEASING.md  autofill_translations.py  bump_control.sh  bumpversion.toml  clean_obsolete.py  compile_translations.sh  install-git-for-windows.ps1  monitor_octoprint_performance.sh  post_commit_build_dist.sh  prettier-hook.sh  restart_octoprint_dev.sh  run_ci_locally.sh  setup_dev.sh  test_checklist.sh  win-bash-wrapper.sh
.githooks/: check_translations_sync.sh  post-commit  pre-commit  prettier-hook.sh  shellcheck-hook.sh
.github/: CODEOWNERS  GITHUB_REPO_SETTINGS.md  TEMPLATE_SETUP.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bandit-sarif.yml  ci.yml  docs.yml  i18n.yml  lint.yml  release.yml  sha.yml  vibe-coded.yml
docs/: README.md  getting-started.md  index.md  jsdoc.json
docs/api/: python.md
docs/architecture/: algorithms.md  data-flow.md  octoprint-integration.md  overview.md  settings.md
docs/development/: contributing.md  release-process.md  testing-diagrams.md  testing.md
docs/development/testing-diagrams/: index.html  plugin-tests.html
docs/diagrams/: bash-relations.html  bump-control.html  commit-process.html  development-scripts.html  setup-dev.html
docs/frontend/: i18n.md  ui-placements.md
docs/reference/: cli-dev-scripts.md  configuration.md  frontend.md
docs/reference/diagrams/: REGENERATE.md  build-scripts.md  classes.md  classes_detailed.md  overview.md  packages.md
docs/reference/diagrams/build-scripts/: check-translations-sync.html  generate-diagrams.html  generate-jsdocs.html  index.html  post-commit.html  pre-commit.html  prettier-hook.html  shellcheck-hook.html  translation-utils.html
extras/: octoprint_uptime.md
octoprint_plugin_template/: __init__.py
octoprint_plugin_template/templates/: settings.jinja2
octoprint_plugin_template/translations/de/LC_MESSAGES/: messages.po
octoprint_plugin_template/translations/en/LC_MESSAGES/: messages.po
octoprint_uptime/: __init__.py  _version.py  plugin.py
octoprint_uptime/static/js/: uptime.js
octoprint_uptime/templates/: navbar.jinja2  settings.jinja2
octoprint_uptime/translations/de/LC_MESSAGES/: messages.mo  messages.po
octoprint_uptime/translations/en/LC_MESSAGES/: messages.mo  messages.po
scripts/: README.md  check_translations_sync.sh  generate-diagrams.sh  generate-jsdocs.sh  prettier-hook.sh  shellcheck-hook.sh  translation_utils.py  win-bash-wrapper.sh
tests/: README.md  plugin_test.py  test_dummy.py  test_uptime.py
translations/: messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.mo  messages.po
