[build-system]
requires = [
    "setuptools>=70,<83",
    "wheel",
    "OctoPrint",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Uptime"
version = "0.2.2.dev10+c49b99e"
description = "Adds system uptime to the navbar and exposes a small uptime API."
authors = [
    {name = "Ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.8, <3.14"

dynamic = [
    "license",
    "dependencies"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
octoprint_uptime = [
    "translations/**/*.mo",
]

[tool.setuptools.packages.find]
include = [
    "octoprint_uptime",
    "octoprint_uptime.*"
]

[project.entry-points."octoprint.plugin"]
octoprint_uptime = "octoprint_uptime"

[project.urls]
Homepage = "https://github.com/Ajimaru/OctoPrint-Uptime"
Repository = "https://github.com/Ajimaru/OctoPrint-Uptime"
Issues = "https://github.com/Ajimaru/OctoPrint-Uptime/issues"

[project.optional-dependencies]
develop = [
    "Babel>=2.17.0",
    "build",
    "mock",
    "pre-commit>=3.0.0",
    "pylint>=2.17.0",
    "pytest",
    "pytest-cov",
    "tomli",
    "black>=24.0.0",
    "isort>=5,<8",
    "flake8>=7.0.0"
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
