[build-system]
requires = [
    "setuptools>=77,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Uptime"
version = "0.4.0rc1+3f301c1"
description = "Adds system uptime to the navbar and exposes a small uptime API."
authors = [
    {name = "Ajimaru", email = "ajimaru_gdr@pm.me"}
]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.9, <4"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

# Any additional requirements (besides OctoPrint) must be listed here.
# OctoPrint itself is the runtime environment, not a pip dependency of the plugin.
dependencies = [
    "flask>=2.2.5",
    # Keep overlap across OctoPrint flavors: 1.11.x needs psutil<7, devel needs >=7.2.2.
    "psutil>=6.1.1,<8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
octoprint_uptime = [
    "translations/**/*.mo",
]

[tool.setuptools.packages.find]
include = [
    "octoprint_uptime",
    "octoprint_uptime.*"
]

[project.entry-points."octoprint.plugin"]
octoprint_uptime = "octoprint_uptime"

[project.urls]
Homepage = "https://github.com/Ajimaru/OctoPrint-Uptime"
Repository = "https://github.com/Ajimaru/OctoPrint-Uptime"
Issues = "https://github.com/Ajimaru/OctoPrint-Uptime/issues"

[project.optional-dependencies]
develop = [
    "Babel>=2.17.0",
    "build",
    "mock",
    "pre-commit>=3.0.0",
    "pylint>=3.3.9",
    "pytest",
    "pytest-cov",
    "tomli",
    "black>=24.0.0",
    "isort>=5,<8",
    "flake8>=7.0.0"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff.lint.pydocstyle]
# Use Google docstring style ("Args:", "Returns:", "Yields:" with colon).
# This silences NumPy-style-only checks (D212, D406, D407, D413) that
# otherwise conflict with the Google convention used across this codebase.
convention = "google"

[tool.pydocstyle]
# Mirror the ruff convention so Prospector/Codacy (which run pydocstyle
# directly) accept Google-style "Args:"/"Yields:" sections instead of
# demanding NumPy-style underlines.
convention = "google"
# Explicitly disable the four NumPy-style-only checks in case the
# convention key is ignored by the tool version in use.
add-ignore = "D212,D406,D407,D413"
